--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "@types/react": "^18.0.14",
     "@types/react-dom": "^18.0.5",
     "axios": "^0.27.2",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.3.2",
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
@@ -46,5 +48,8 @@
     "singleQuote": true,
     "tabWidth": 4,
     "arrowParens": "avoid"
+  },
+  "devDependencies": {
+    "@types/lodash": "^4.14.182"
   }
 }
